# autoresearch-competitions

./: .gitignore  Cargo.toml  Dockerfile  OPERATORS.md  README.md  ROADMAP.md  SPEC.md  blueprint-definition.json  remappings.txt
.github/workflows/: ci.yml
autoresearch-competitions-bin/: Cargo.toml
autoresearch-competitions-bin/src/: main.rs
autoresearch-competitions-lib/: Cargo.toml
autoresearch-competitions-lib/src/: config.rs  lib.rs  registration.rs
autoresearch-competitions-lib/tests/: e2e_lifecycle.rs
autoresearch-generic-engine/: Cargo.toml
autoresearch-generic-engine/src/: lib.rs
autoresearch-protocol/: Cargo.toml
autoresearch-protocol/src/: collaborative.rs  continuous.rs  dispute.rs  lib.rs  lift.rs  orchestrator.rs  private.rs  slash.rs  stake.rs  store.rs
autoresearch-runtime/: Cargo.toml
autoresearch-runtime/src/: attestation.rs  lib.rs  marketplace.rs  privacy.rs  reward.rs  traits.rs  types.rs
autoresearch-sandbox/: Cargo.toml
autoresearch-sandbox-runtime/: Cargo.toml
autoresearch-sandbox-runtime/src/: lib.rs  sandbox_runtime_host.rs
autoresearch-sandbox/src/: engine.rs  host.rs  lib.rs  local.rs
autoresearch-sandbox/tests/: e2e_sandbox_method.rs
autoresearch-supervisor/: Cargo.toml
autoresearch-supervisor/src/: lib.rs
autoresearch-training-blueprint-adapter/: Cargo.toml
autoresearch-training-blueprint-adapter/src/: lib.rs
autoresearch-training-blueprint-adapter/tests/: operator_integration.rs
autoresearch-training-runtime/: Cargo.toml
autoresearch-training-runtime/src/: lib.rs
autoresearch-verticals/: Cargo.toml
autoresearch-verticals/src/: agent_improvement.rs  combinatorial_solver.rs  config_opt.rs  distributed_training.rs  forecasting.rs  hierarchical.rs  lib.rs  nanogpt.rs  program_superopt.rs  scorers.rs  tee_cluster.rs  theorem_proving.rs  training_market.rs  util.rs
autoresearch-verticals/tests/: e2e_agent_improvement.rs  e2e_collaborative_marketplace.rs  e2e_combinatorial_solver.rs  e2e_config_opt.rs  e2e_continuous_arena.rs  e2e_dispute.rs  e2e_distributed_training.rs  e2e_forecasting.rs  e2e_generalization.rs  e2e_nanogpt.rs  e2e_oneshot_competitive.rs  e2e_private_bounty.rs  e2e_private_oracle.rs  e2e_program_superopt.rs  e2e_theorem_proving.rs
contracts/script/: Deploy.s.sol
contracts/src/: CompetitionManager.sol
contracts/test/: CompetitionManager.t.sol  CompetitionManagerContinuous.t.sol  CompetitionManagerDispute.t.sol  CompetitionManagerM6.t.sol  CompetitionManagerPrivacy.t.sol  CompetitionManagerScorerKind.t.sol  Deploy.t.sol
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISTRIBUTED-TRAINING.md  GENERALIZATION.md  IMPLEMENTATION-PLAN.md  MECHANISM.md  PRIVACY.md  RANKING-OBJECTIVE.md  RESEARCH.md  SPEEDRUN.md
experiments/nanogpt/: README.md  nanogpt_eval.py
metadata/: blueprint-metadata.json
