[workspace]
resolver = "3"
members = [
    "autoresearch-runtime",
    "autoresearch-protocol",
    "autoresearch-sandbox",
    "autoresearch-verticals",
    "autoresearch-competitions-lib",
    "autoresearch-competitions-bin",
]
# The REAL operator-compute backend. Excluded because its `sandbox-runtime` git dep
# pins `blueprint-sdk = "=0.2.0-alpha.6"`, which is semver-incompatible with this
# workspace's `blueprint-sdk` — a default member carrying that dep would break the
# default `cargo build` at resolution time. Excluding it keeps the six default gates
# green while the real backend stays genuinely wired and compile-attemptable on its
# own (`cargo build --features sandbox-runtime` from its directory).
exclude = ["autoresearch-sandbox-runtime"]

[workspace.package]
authors = ["Tangle Network"]
edition = "2024"
description = "A Tangle Blueprint for decentralized AI autoresearch"
license = "MIT OR Apache-2.0"
