[package]
name = "autoresearch-competitions-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "autoresearch-competitions"
path = "src/main.rs"

[dependencies]
autoresearch-competitions-lib = { path = "../autoresearch-competitions-lib" }
blueprint-sdk = { version = "=0.2.0-alpha.6", default-features = false, features = ["std", "tangle"] }
blueprint-producers-extra = { version = "=0.2.0-alpha.5", features = ["cron"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
