[package]
name = "autoresearch-competitions-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
autoresearch-runtime = { path = "../autoresearch-runtime" }
alloy-sol-types = "1.3"
blueprint-sdk = { version = "0.2.0-alpha.5", default-features = false, features = ["std", "tracing", "macros", "tangle"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
alloy-primitives = "1"
anyhow = "1"
blueprint-anvil-testing-utils = "0.2.0-alpha.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
