[package]
name = "autoresearch-protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Off-chain orchestration for autoresearch competitions: store, lift estimation, and the one-shot competitive runner over the Surface/Scorer/Engine seams"
license.workspace = true

[dependencies]
autoresearch-runtime = { path = "../autoresearch-runtime" }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
