[package]
name = "autoresearch-runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Core domain model and pluggable interfaces (Surface / Scorer / Engine / RewardSchedule) for the autoresearch-competitions blueprint"
license.workspace = true

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.12"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
