[package]
name = "autoresearch-verticals"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Concrete Surface/Scorer/Engine verticals for autoresearch competitions, starting with a deterministic config-optimization demo that produces real held-out lift"
license.workspace = true

[dependencies]
autoresearch-runtime = { path = "../autoresearch-runtime" }
autoresearch-protocol = { path = "../autoresearch-protocol" }
autoresearch-generic-engine = { path = "../autoresearch-generic-engine" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
