[package]
name = "autoresearch-verticals"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Surface/Scorer verticals for autoresearch competitions — a deterministic linear-classifier demo plus the agent/solver/proof/program/forecast scorers and the four ScorerKind dispatches, all driven by the shared autoresearch-generic-engine GenericEngine"
license.workspace = true

[dependencies]
autoresearch-runtime = { path = "../autoresearch-runtime" }
autoresearch-protocol = { path = "../autoresearch-protocol" }
autoresearch-generic-engine = { path = "../autoresearch-generic-engine" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
